syntax = "proto3";
package herax.service;

import "google/protobuf/empty.proto";

// For Error

message ErrorMsg {
  int32 code = 1;
  string message = 2;
  string data = 3;
}


// For Requests

message GetServerInfoRequest {
    string version = 1;
    int32 id = 2;
}


// For Responses

message ServerInfoData {
  string server_name = 1;
  int32 major_version = 2;
  int32 minor_version = 3;
}

message GetServerInfoResponse {
    int32 code = 1;
    oneof value {
        string message = 2;
        ServerInfoData data = 3;
    }
}


// For File Object(General)
message FileRequest {
    string file_path = 1;
    bool stream = 2;
    bool isOverWrite = 3;
}

message FileResponse {
    string id = 1; 
    string file_path = 2;
}

// For Info
message AnndataInfoRequest {
    FileRequest file = 1;
}

message AnndataInfoData {
    int32 n_cells = 1;
    int32 n_genes = 2;
    repeated string obs= 3;
    repeated string var = 4;
    repeated string obsm = 5;
    repeated string varm = 6;
    repeated string uns = 7;
    repeated string layers = 8;
}

message AnndataInfoResponse {
    int32 code = 1;
    oneof value {
        string message = 2;
        AnndataInfoData data = 3;
        FileResponse file = 4;
    }
}

// For Dimensionality Reduction

message DimredPCARequest {
    FileRequest file = 1;
    int32 n_components = 2;
    string batch = 3;
    string key_store = 4;
}

message DimredPCAResponse {
    int32 code = 1;
    oneof value {
        string message = 2;
        EmbeddingData data = 3;
        FileResponse file = 4;
    }
}

message DimredSCVIRequest {
    FileRequest file = 1;
    int32 n_latents = 2;
    string batch = 3;
    string key_store = 4;
}

message DimredSCVIResponse {
    int32 code = 1;
    oneof value {
        string message = 2;
        EmbeddingData data = 3;
        FileResponse file = 4;
    }
}

message DimredTsneRequest {
    FileRequest file = 1;
    int32 perplexity = 2;
    int32 n_components = 3;
    string key_get = 4;
    string key_store = 5;
}


message EmbeddingData {
    bytes arr_bytes = 1;
    repeated int32 shape = 2;
    string dtype = 3; 
}

message DimredTsneResponse {
    int32 code = 1;
    oneof value {
        string message = 2;
        EmbeddingData data = 3;
        FileResponse file = 4;
    }
}



message DimredUmapRequest {
    FileRequest file = 1;
    int32 n_neighbors = 2;
    int32 n_components = 3;
    string key_get = 4;
    string key_store = 5;
}

message DimredUmapResponse {
    int32 code = 1;
    oneof value {
        string message = 2;
        EmbeddingData data = 3;
        FileResponse file = 4;
    }
}

// For clustering

message ClusteringLouvainRequest {
    FileRequest file = 1;
    float resolution = 2;
    optional string embedding_key = 3;
    optional string key_added = 4;
}

message ClusteringLouvainData {
    int32 n_clusters = 1;
    repeated int32 codes = 2;
    repeated string categories = 3;
}

message ClusteringLouvainResponse {
    int32 code = 1;
    oneof value {
        string message = 2;
        ClusteringLouvainData data = 3;
        FileResponse file = 4;
    }
}

message ClusteringLeidenRequest {
    FileRequest file = 1;
    float resolution = 2;
    optional string embedding_key = 3;
    optional string key_added = 4;
}

message ClusteringLeidenData {
    int32 n_clusters = 1;
    repeated int32 codes = 2;
    repeated string categories = 3;
}

message ClusteringLeidenResponse {
    int32 code = 1;
    oneof value {
        string message = 2;
        ClusteringLeidenData data = 3;
        FileResponse file = 4;
    }
}

message ClusteringKmeansRequest {
    FileRequest file = 1;
    int32 n_clusters = 2;
    optional string embedding_key = 3;
    optional string key_added = 4;
}

message ClusteringKmeansData {
    int32 n_clusters = 1;
    repeated int32 codes = 2;
    repeated string categories = 3;
}

message ClusteringKmeansResponse {
    int32 code = 1;
    oneof value {
        string message = 2;
        ClusteringKmeansData data = 3;
        FileResponse file = 4;
    }
}


// Differential Expression
message DiffexpTTestRequest{
    FileRequest file = 1;
    repeated bool mask_a = 2;
    repeated bool mask_b = 3;
    int32 top_n = 4;
    float diffexp_cutoff = 5; 
}

message DiffexpTTestData {
  repeated string genes = 1;
  repeated float log2fc = 2;
  repeated float pvalue = 3;
  repeated float fdr = 4;
}

message DiffexpTTestResponse{
    int32 code = 1;
    oneof value {
        string message = 2;
        FileResponse file = 4;
        DiffexpTTestData data = 3;
    }
}


// Query data

// For Services
service HeraXService {
    rpc Ping(google.protobuf.Empty) returns (ErrorMsg);
    rpc GetServerInfo(GetServerInfoRequest) returns (GetServerInfoResponse);

    // Info
    rpc AnndataInfo(AnndataInfoRequest) returns (AnndataInfoResponse);

    // Dimensionality Reduction
    rpc DimredPCA(DimredPCARequest) returns (DimredPCAResponse);
    rpc DimredSCVI(DimredSCVIRequest) returns (DimredSCVIResponse);
    rpc DimredTsne(DimredTsneRequest) returns (DimredTsneResponse);
    rpc DimredUmap(DimredUmapRequest) returns (DimredUmapResponse);

    // Clustering
    rpc ClusteringLouvain(ClusteringLouvainRequest) returns (ClusteringLouvainResponse);
    rpc ClusteringLeiden(ClusteringLeidenRequest) returns (ClusteringLeidenResponse);
    rpc ClusteringKmeans(ClusteringKmeansRequest) returns (ClusteringKmeansResponse);

    // Differential Expression
    rpc DiffexpTTest(DiffexpTTestRequest) returns (DiffexpTTestResponse);

}
